--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-fire": "~0.3.1",
     "angular-animate": "~1.2.0-rc.3",
     "angular-google-maps": "1.0.2",
+    "bootstrap-sass": "~3.0.2",
     "animate.css": "~2.1.0"
   },
   "devDependencies": {
