--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,10 @@
   "name": "vacations",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.0.7",
-    "json3": "~3.2.4",
-    "es5-shim": "~2.0.8",
-    "jquery": "~1.9.1",
+    "angular": "1.2.15",
+    "json3": "~3.2.6",
+    "es5-shim": "~2.1.0",
+    "jquery": "~1.11.0",
     "angular-route": "~1.2.0-rc.3",
     "angular-animate": "~1.2.0-rc.3",
     "angular-google-maps": "1.0.2",
