--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-karma": "^0.8.3",
     "grunt-newer": "~0.6.1",
     "jshint-stylish": "~0.1.3",
+    "grunt-modernizr": "~0.4.0",
     "karma": "^0.12.16",
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-ng-scenario": "^0.1.0",
