--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-google-maps": "1.0.2",
     "bootstrap-sass": "~3.0.2",
     "animate.css": "~2.1.0",
-    "angularfire": "~0.7.1"
+    "angularfire": "~0.7.1",
+    "modernizr": "~2.8.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
