--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,5 @@
 {
-    "directory": "app/bower_components"
+    "directory": "app/bower_components",
+    "proxy":"http://gabriel.oliveira:langhans6240@172.20.1.253:3128",
+  	"https-proxy":"http://gabriel.oliveira:langhans6240@172.20.1.253:3128"
 }
