--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "bootstrap-sass": "~3.0.2",
     "animate.css": "~2.1.0",
     "angularfire": "~0.7.1",
-    "modernizr": "~2.8.2"
+    "modernizr": "~2.8.2",
+    "angular-i18n": "~1.2.16",
+    "angular-ui-utils": "~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
